Error in installation of elasticsearch
Error in the instalation of elasticsearch (reverse link)
Added default slack configuration for ninjabot-0

--- a/vagrant/provision/roles/elasticsearch/tasks/main.yml
+++ b/vagrant/provision/roles/elasticsearch/tasks/main.yml
@@ -43,8 +43,8 @@
 
 - name: ensure directory is owned by elasticsearch
   file:
-    src: /usr/share/elasticsearch/data
-    dest: /var/lib/elasticsearch
+    src: /var/lib/elasticsearch
+    dest: /usr/share/elasticsearch/data
     owner: elasticsearch
     group: elasticsearch
     state: link
