--- a/vagrant/provision/roles/hubot/files/ninjabot/.env.template
+++ b/vagrant/provision/roles/hubot/files/ninjabot/.env.template
@@ -1,5 +1,5 @@
 export HUBOT_ADAPTER=slack
-export HUBOT_SLACK_TOKEN=xoxb-.
+export HUBOT_SLACK_TOKEN=xoxb-522106754950-788190080933-B3s5WSkJxO4N4OvCFEJJlhNv
 export HUBOT_FLOWDOCK_API_TOKEN=...
 export EXPRESS_PORT=8888
 #export HUBOT_PUBSUB_SEND_EVENT_NAME=false
